feat: improve light
